# chess-cpp

./: Board.cpp  BoardFactory.cpp  BoardFactory.h  CMakeLists.txt  Coordinates.cpp  CoordinatesShift.cpp  Game.cpp  InputCoordinates.cpp  Move.cpp  PieceFactory.cpp  PieceFactory.h  StalemateGameChecker.cpp  StalemateGameChecker.h  main.cpp
board/: Board.cpp  Board.h  BoardFactory.cpp  BoardFactory.h  Move.cpp  Move.h
checker/: CheckmateGameChecker.cpp  CheckmateGameChecker.h  StalemateGameChecker.cpp  StalemateGameChecker.h
core/: Coordinates.cpp  Coordinates.h  CoordinatesShift.cpp  File.h  Game.cpp  Game.h  InputCoordinates.cpp  InputCoordinates.h
header/: Board.h  Color.h  Coordinates.h  CoordinatesShift.h  File.h  Game.h  GameState.h  GameStateChecker.h  InputCoordinates.h  Move.h
piece/: Bishop.cpp  IBishop.cpp  IRook.cpp  King.cpp  Knight.cpp  LongRangePiece.cpp  Pawn.cpp  Piece.cpp  PieceFactory.cpp  Queen.cpp  Rook.cpp
piece/header/: Bishop.h  IBishop.h  IRook.h  King.h  Knight.h  LongRangePiece.h  Pawn.h  Piece.h  PieceFactory.h  Queen.h  Rook.h
render/: ConsoleBoardRenderer.cpp  ConsoleBoardRenderer.h
render/header/: ConsoleBoardRenderer.h
utils/: BoardUtils.cpp  BoardUtils.h
